# omnifetch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pylintrc  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/rulesets/: main-branch-protection.json
.github/scripts/: check_conventional_title.py
.github/workflows/: ci.yml  code-scanning-gate.yml  codeql.yml  container-image.yml  dependency-review.yml  pr-title.yml  scorecard.yml
plan/: 00-overview.md  01-foundations.md  02-async-http-client.md  04-provider-config.md  05-failure-detection.md  06-cache.md  07-providers-base-registry-generic.md  08-providers-structured.md  09-providers-specialized.md  09b-provider-github.md  10-orchestrator-concurrency.md  11-mcp-tool-server.md  12-observability.md  13-testing-and-parity.md  14-concurrency-and-performance.md  15-packaging-docker.md
plan/reviews/: CODEX.md  GEMINI.md
src/omnifetch/: __init__.py  __main__.py  config.py  logging.py  schemas.py  server.py  telemetry.py
src/omnifetch/fetch/: __init__.py
src/omnifetch/fetch/engine/: __init__.py  failure.py  race.py  runtime.py  skip.py  waterfall.py
src/omnifetch/fetch/providers/: __init__.py  base.py  brightdata.py  cloudflare_browser.py  decodo.py  diffbot.py  firecrawl.py  jina.py  kimi.py  kimi_proxy.py  leadmagic.py  linkup.py  olostep.py  opengraph.py  oxylabs.py  registry.py  scrapedo.py  scrapegraphai.py  scrapeless.py  scraperapi.py  scrapfly.py  scrapingant.py  scrapingbee.py  scrappey.py  serpapi.py  sociavault.py  spider.py  supadata.py  tavily.py  you.py  zyte.py
src/omnifetch/fetch/providers/github/: __init__.py  api.py  constants.py  formatters.py  graphql.py  handlers.py  handlers_file.py  markdown_builder.py  provider.py  repo_overview.py  types.py  url_parser.py
src/omnifetch/fetch/shared/: __init__.py  config.py  html.py  http.py  types.py  util.py  youtube.py
src/omnifetch/tools/: __init__.py  fetch.py  hello.py
tests/: conftest.py  test_docker_integration.py  test_fetch_tool.py  test_hello_tool.py  test_logging.py  test_main.py  test_package.py  test_schema_enforcement.py  test_telemetry.py
tests/fetch/: __init__.py
tests/fetch/engine/: __init__.py  test_failure.py  test_race.py  test_skip.py  test_waterfall.py
tests/fetch/providers/: __init__.py  test_brightdata.py  test_cloudflare_browser.py  test_decodo.py  test_diffbot.py  test_github.py  test_jina.py  test_kimi.py  test_leadmagic.py  test_linkup.py  test_olostep.py  test_opengraph.py  test_oxylabs.py  test_registry.py  test_scrapedo.py  test_scrapegraphai.py  test_scrapeless.py  test_scraperapi.py  test_scrapfly.py  test_scrapingant.py  test_scrapingbee.py  test_scrappey.py  test_serpapi.py  test_sociavault.py  test_spider.py  test_supadata.py  test_tavily_firecrawl.py  test_you.py  test_zyte.py
tests/fetch/shared/: __init__.py  test_config.py  test_html.py  test_http.py  test_types.py  test_util.py  test_youtube.py
