[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "omnifetch"
dynamic = ["version"]
description = "Production-grade FastMCP server exposing a strictly-typed, JSON-Schema-enforced toolset."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "CJ Angrist", email = "cjangrist@gmail.com" }]
keywords = ["mcp", "fastmcp", "model-context-protocol", "opentelemetry", "ai-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastmcp==3.4.2",
  "httpx[http2]==0.28.1",
  "logdecorator==2.5",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-dotenv==1.2.2",
  "rich==15.0.0",
  "tenacity==9.1.4",
]

[project.optional-dependencies]
telemetry = [
  "opentelemetry-sdk==1.43.0",
  "opentelemetry-exporter-otlp==1.43.0",
]

[project.scripts]
omnifetch = "omnifetch.__main__:main"

[project.urls]
Homepage = "https://github.com/cjangrist/omnifetch"
Issues = "https://github.com/cjangrist/omnifetch/issues"

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pip-audit==2.10.1",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "respx==0.23.1",
  "ruff==0.15.20",
]

[tool.hatch.version]
path = "src/omnifetch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omnifetch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib --cov=omnifetch --cov-report=term-missing"

[tool.coverage.run]
source = ["src/omnifetch"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# logdecorator ships no type information (no py.typed marker).
module = ["logdecorator.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# logdecorator's decorators are untyped; permit them in the tool module only.
module = ["omnifetch.tools.fetch", "omnifetch.tools.hello"]
disallow_untyped_decorators = false

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TID", "RUF", "ANN", "PL", "D"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
# Lazy imports are intentional: the OpenTelemetry SDK is an optional extra, and
# build_server is exposed lazily to keep `import omnifetch` light.
"src/omnifetch/__init__.py" = ["PLC0415"]
"src/omnifetch/__main__.py" = ["PLC0415"]
"src/omnifetch/telemetry.py" = ["PLC0415"]
"tests/**" = ["ANN001", "ANN201", "PLR2004", "PLR0913", "D103"]

[tool.ruff.lint.isort]
known-first-party = ["omnifetch"]
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"
